# IORecorder

./: .gitignore  README.md  main.py  pyproject.toml  tony-bobo.ipynb
iorecorder/: player.py  recorders.py  viewer.py
src/IORecorder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/iorecorder/: __init__.py  recorders.py  viewer.py
