[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IORecorder"
version = "0.2.0"
description = "A Python library for recording I/O interactions (keyboard, mouse, and screen)."
authors = [
    {name = "Emericen", email = "yuedilia@usc.edu"}
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "moviepy==1.0.2",
    "pynput==1.7.7",
    "numpy==2.2.2",
    "pyautogui==0.9.54",
    "pillow==11.1.0",
]
license = {text = "MIT"}
keywords = ["input", "output", "recording", "I/O", "keyboard", "mouse", "screen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Source = "https://github.com/Emericen/IORecorder"
Issues = "https://github.com/Emericen/IORecorder/issues"

[tool.setuptools.packages.find]
where = ["."]